# zellij-theme-plugin

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: data.rs  lib.rs  main.rs
