[package]
name = "zellij-theme-selector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
kdl = "4.6"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
crossterm = "0.25"

[[bin]]
name = "zellij-theme-selector"
path = "src/main.rs"

[profile.dev]
debug = true